[gd_scene load_steps=2 format=3 uid="uid://cltkuqe34l0bw"]

[ext_resource type="Script" path="res://scripts/AuthScreen.gd" id="1_2r3h4"]

[node name="AuthScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_2r3h4")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.1, 0.1, 0.15, 1)

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Title" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "üêù BeeKeeperTD"
horizontal_alignment = 1

[node name="Subtitle" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Login or Register to Continue"
horizontal_alignment = 1

[node name="Spacer1" type="Control" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="TabContainer" type="TabContainer" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(500, 450)
layout_mode = 2

[node name="Login" type="VBoxContainer" parent="CenterContainer/VBoxContainer/TabContainer"]
layout_mode = 2
theme_override_constants/separation = 15
metadata/_tab_index = 0

[node name="EmailLabel" type="Label" parent="CenterContainer/VBoxContainer/TabContainer/Login"]
layout_mode = 2
text = "Email:"

[node name="EmailInput" type="LineEdit" parent="CenterContainer/VBoxContainer/TabContainer/Login"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
placeholder_text = "your@email.com"

[node name="PasswordLabel" type="Label" parent="CenterContainer/VBoxContainer/TabContainer/Login"]
layout_mode = 2
text = "Password:"

[node name="PasswordInput" type="LineEdit" parent="CenterContainer/VBoxContainer/TabContainer/Login"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
placeholder_text = "Min 14 characters"
secret = true

[node name="ShowPasswordCheck" type="CheckButton" parent="CenterContainer/VBoxContainer/TabContainer/Login"]
layout_mode = 2
text = "Show Password"

[node name="Spacer" type="Control" parent="CenterContainer/VBoxContainer/TabContainer/Login"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
size_flags_vertical = 3

[node name="LoginButton" type="Button" parent="CenterContainer/VBoxContainer/TabContainer/Login"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "üîê Login"

[node name="ErrorLabel" type="Label" parent="CenterContainer/VBoxContainer/TabContainer/Login"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.3, 0.3, 1)
theme_override_font_sizes/font_size = 14
horizontal_alignment = 1

[node name="Register" type="VBoxContainer" parent="CenterContainer/VBoxContainer/TabContainer"]
visible = false
layout_mode = 2
theme_override_constants/separation = 15
metadata/_tab_index = 1

[node name="UsernameLabel" type="Label" parent="CenterContainer/VBoxContainer/TabContainer/Register"]
layout_mode = 2
text = "Username:"

[node name="UsernameInput" type="LineEdit" parent="CenterContainer/VBoxContainer/TabContainer/Register"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
placeholder_text = "3-20 characters"
max_length = 20

[node name="EmailLabel" type="Label" parent="CenterContainer/VBoxContainer/TabContainer/Register"]
layout_mode = 2
text = "Email:"

[node name="EmailInput" type="LineEdit" parent="CenterContainer/VBoxContainer/TabContainer/Register"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
placeholder_text = "your@email.com"

[node name="PasswordLabel" type="Label" parent="CenterContainer/VBoxContainer/TabContainer/Register"]
layout_mode = 2
text = "Password:"

[node name="PasswordInput" type="LineEdit" parent="CenterContainer/VBoxContainer/TabContainer/Register"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
placeholder_text = "Min 14 chars (upper, lower, number, special)"
secret = true

[node name="PasswordStrength" type="ProgressBar" parent="CenterContainer/VBoxContainer/TabContainer/Register"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2
max_value = 5.0
show_percentage = false

[node name="PasswordStrengthLabel" type="Label" parent="CenterContainer/VBoxContainer/TabContainer/Register"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Password Strength: Weak"

[node name="PasswordConfirmLabel" type="Label" parent="CenterContainer/VBoxContainer/TabContainer/Register"]
layout_mode = 2
text = "Confirm Password:"

[node name="PasswordConfirmInput" type="LineEdit" parent="CenterContainer/VBoxContainer/TabContainer/Register"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
placeholder_text = "Re-enter password"
secret = true

[node name="ShowPasswordCheck" type="CheckButton" parent="CenterContainer/VBoxContainer/TabContainer/Register"]
layout_mode = 2
text = "Show Passwords"

[node name="Spacer" type="Control" parent="CenterContainer/VBoxContainer/TabContainer/Register"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2
size_flags_vertical = 3

[node name="RegisterButton" type="Button" parent="CenterContainer/VBoxContainer/TabContainer/Register"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "üìù Register"

[node name="ErrorLabel" type="Label" parent="CenterContainer/VBoxContainer/TabContainer/Register"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.3, 0.3, 1)
theme_override_font_sizes/font_size = 14
horizontal_alignment = 1

[node name="LoadingPanel" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="LoadingContainer" type="CenterContainer" parent="LoadingPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="LoadingPanel/LoadingContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Label" type="Label" parent="LoadingPanel/LoadingContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "üîÑ Authenticating..."
horizontal_alignment = 1

[node name="ProgressBar" type="ProgressBar" parent="LoadingPanel/LoadingContainer/VBoxContainer"]
custom_minimum_size = Vector2(300, 30)
layout_mode = 2